feat: 읽기 전용 트랜잭션 애너테이션 적용